added large subs to pull

--- a/Preprocessing/subs_network.ipynb
+++ b/Preprocessing/subs_network.ipynb
@@ -2848,509 +2848,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['aspiememes',\n",
-       " 'sciencememes',\n",
-       " 'Anarcho_Capitalism',\n",
-       " 'ConservativeMemes',\n",
-       " 'CoronavirusCirclejerk',\n",
-       " 'JustUnsubbed',\n",
-       " 'theyknew',\n",
-       " 'introvert',\n",
-       " 'southafrica',\n",
-       " 'SurprisingNoOne',\n",
-       " 'AnythingGoesNews',\n",
-       " 'GoldandBlack',\n",
-       " 'PositiveNewsCovid19',\n",
-       " 'RuralNewsNetwork',\n",
-       " 'Anticonsumption',\n",
-       " 'GreenAndPleasant',\n",
-       " 'January6',\n",
-       " 'LandlordLove',\n",
-       " 'LateStageImperialism',\n",
-       " 'OliverMarkusMalloy',\n",
-       " 'Palestine',\n",
-       " 'lebanon',\n",
-       " 'tech',\n",
-       " 'wholesome',\n",
-       " '196',\n",
-       " 'ToiletPaperUSA',\n",
-       " 'TrollFaceIncident',\n",
-       " '2meirl42meirl4meirl',\n",
-       " 'wholesomegreentext',\n",
-       " 'ANormalDayInAmerica',\n",
-       " 'AOC',\n",
-       " 'TheFightThatMatters',\n",
-       " 'BeansInThings',\n",
-       " 'WalmartCelebrities',\n",
-       " 'WtWBBot',\n",
-       " 'thanksihateit',\n",
-       " 'BadChoicesGoodStories',\n",
-       " 'InsaneProtestors',\n",
-       " 'SocialJusticeInAction',\n",
-       " 'TheNarcoblog701',\n",
-       " 'alberta',\n",
-       " 'islam',\n",
-       " 'worldnewsvideo',\n",
-       " 'AmericanFascism2020',\n",
-       " 'AreTheStraightsOK',\n",
-       " 'Astuff',\n",
-       " 'AskWomenOfColorOver30',\n",
-       " 'anime_titties',\n",
-       " 'AutisticPride',\n",
-       " 'Moronavirus',\n",
-       " 'BoycottChina',\n",
-       " 'BreadTube',\n",
-       " 'thedavidpakmanshow',\n",
-       " 'COMPLETEANARCHY',\n",
-       " 'CanadaPolitics',\n",
-       " 'CapitolConsequences',\n",
-       " 'ClassPoliticsTwitter',\n",
-       " 'lostgeneration',\n",
-       " 'DeSantis',\n",
-       " 'JordanPeterson',\n",
-       " 'LouderWithCrowder',\n",
-       " 'Republican',\n",
-       " 'AmericanPandemics',\n",
-       " 'CoronavirusVariants',\n",
-       " 'CoronavirusUS',\n",
-       " 'NoLockdownsNoMasks',\n",
-       " 'OpenTheSchools',\n",
-       " 'ParentingWithoutFear',\n",
-       " 'ShitPoliticsSays',\n",
-       " 'NoNewNormalBan',\n",
-       " 'CoronavirusPandemic',\n",
-       " 'CoronaVirus_2019_nCoV',\n",
-       " 'Cringetopia',\n",
-       " 'CuratedTumblr',\n",
-       " 'collapse',\n",
-       " 'DankLeft',\n",
-       " 'DemocraticSocialism',\n",
-       " 'DescentIntoTyranny',\n",
-       " 'TheHallOfShame',\n",
-       " 'Brand_Insider',\n",
-       " 'composernews',\n",
-       " 'Edmonton',\n",
-       " 'onguardforthee',\n",
-       " 'EndlessWar',\n",
-       " 'EntitledBitch',\n",
-       " 'EverythingScience',\n",
-       " 'AIandRobotics',\n",
-       " 'regenerate',\n",
-       " 'FoxFiction',\n",
-       " 'ActualFreakouts',\n",
-       " 'NotoQanon',\n",
-       " 'entitledparentsmemes',\n",
-       " 'karens',\n",
-       " 'Fuckthealtright',\n",
-       " 'ForUnitedStates',\n",
-       " 'GenZedong',\n",
-       " 'ShitLiberalsSay',\n",
-       " 'CommunismMemes',\n",
-       " 'GreenAndFriendly',\n",
-       " 'GreyAndUnpleasant',\n",
-       " 'Labour',\n",
-       " 'LabourUK',\n",
-       " 'Politsturm',\n",
-       " 'WikiLeaks',\n",
-       " 'gay_irl',\n",
-       " 'israelexposed',\n",
-       " 'ukpolitics',\n",
-       " 'TheRightCantMeme',\n",
-       " 'fragilecommunism',\n",
-       " 'NotFunnyButHilarious',\n",
-       " 'HomeDepot',\n",
-       " 'IndianCountry',\n",
-       " 'InterestingVideoClips',\n",
-       " 'Incredibly',\n",
-       " 'WMAWCBF',\n",
-       " 'brexit',\n",
-       " 'kotakuinaction2',\n",
-       " 'northernireland',\n",
-       " 'vaxxhappened',\n",
-       " 'LockdownCriticalLeft',\n",
-       " 'LockdownSkepticism',\n",
-       " 'TrueAnon',\n",
-       " 'stupidpol',\n",
-       " 'NoNoNewNormal',\n",
-       " 'criticalblunder',\n",
-       " 'medizzy',\n",
-       " 'Makesmybloodboil',\n",
-       " 'Maps',\n",
-       " 'megafaunarewilding',\n",
-       " 'oldmaps',\n",
-       " 'Netherlands',\n",
-       " 'Slovakia',\n",
-       " 'mapporncirclejerk',\n",
-       " 'MarchAgainstNazis',\n",
-       " 'RepublicanValues',\n",
-       " 'MurderedByAOC',\n",
-       " 'MxRMods',\n",
-       " 'NewDealAmerica',\n",
-       " 'NoNewNormal',\n",
-       " 'ConspiracyUltra',\n",
-       " 'CovidIsACult',\n",
-       " 'altnewz',\n",
-       " 'antimaskers',\n",
-       " 'conspiracies',\n",
-       " 'conspiracyUK',\n",
-       " 'conspiracyhub',\n",
-       " 'conspiro',\n",
-       " 'theculling',\n",
-       " 'NonPoliticalTwitter',\n",
-       " 'ParlerWatch',\n",
-       " 'PoliticalVideo',\n",
-       " 'Political_Revolution',\n",
-       " 'ItHadToBeBrazil',\n",
-       " 'PublicFreakoutX',\n",
-       " 'Qult_Headquarters',\n",
-       " 'houston',\n",
-       " 'texas',\n",
-       " 'wordington',\n",
-       " 'yourmomshousepodcast',\n",
-       " 'conspiracy_commons',\n",
-       " 'karen',\n",
-       " 'newyorkcity',\n",
-       " 'sydney',\n",
-       " 'Trumpgret',\n",
-       " 'maskfreakouts',\n",
-       " 'QAnonCasualties',\n",
-       " 'QanonKaren',\n",
-       " 'InsaneParler',\n",
-       " 'MeWeTrolling',\n",
-       " 'skeptic',\n",
-       " 'Rakingthemuck',\n",
-       " 'ReallyAmerican',\n",
-       " 'SapphoAndHerFriend',\n",
-       " 'Scotland',\n",
-       " 'ShitAmericansSay',\n",
-       " 'Sino',\n",
-       " 'SocialistRA',\n",
-       " 'StallmanWasRight',\n",
-       " 'TikTokHumor',\n",
-       " 'TimDillon',\n",
-       " 'DankMemesFromSite19',\n",
-       " 'SpeedOfLobsters',\n",
-       " 'TOTALLYREALTWEETS',\n",
-       " 'VaushV',\n",
-       " 'YUROP',\n",
-       " 'TopMindsOfReddit',\n",
-       " 'Trumpvirus',\n",
-       " 'EcoNewsNetwork',\n",
-       " 'Green_News',\n",
-       " 'LGBTnews',\n",
-       " 'TheHealingEarth',\n",
-       " 'WestVirginia',\n",
-       " 'Positive_News',\n",
-       " 'WatchDogsWoofInside',\n",
-       " 'premiuminternet',\n",
-       " 'WayOfTheBern',\n",
-       " 'NEWPOLITIC',\n",
-       " 'WhatTheTwitter',\n",
-       " 'wokekids',\n",
-       " 'alltheleft',\n",
-       " 'union',\n",
-       " 'EUnews',\n",
-       " 'PBS_NewsHour',\n",
-       " 'climatesolutions',\n",
-       " 'europes',\n",
-       " 'geopolitics',\n",
-       " 'inthenews',\n",
-       " 'japan',\n",
-       " 'korea',\n",
-       " 'nationofeurope',\n",
-       " 'neocentrism',\n",
-       " 'taiwan',\n",
-       " 'uninsurable',\n",
-       " 'worldevents',\n",
-       " 'artmemes',\n",
-       " 'INTP',\n",
-       " 'aaaaaaacccccccce',\n",
-       " 'depression_memes',\n",
-       " 'furry_irl',\n",
-       " 'goodanimemes',\n",
-       " 'infp',\n",
-       " 'socialanxiety',\n",
-       " 'Calgary',\n",
-       " 'CrimeMugshots',\n",
-       " 'Kashmiri',\n",
-       " 'The_Mueller',\n",
-       " 'myanmar',\n",
-       " 'BabyBumps',\n",
-       " 'BorderCollie',\n",
-       " 'ArchitecturalRevival',\n",
-       " 'BrazilianPainting',\n",
-       " 'HUEstation',\n",
-       " 'covidskepticscanada',\n",
-       " 'canadaleft',\n",
-       " 'catsaysmao',\n",
-       " 'chomsky',\n",
-       " 'collapze',\n",
-       " 'xrmed',\n",
-       " 'InfowarriorRides',\n",
-       " 'dontyouknowwhoiam',\n",
-       " 'stupidpeoplefacebook',\n",
-       " 'DebateVaccine',\n",
-       " 'TrueAntiVaccination',\n",
-       " 'conspiracyNOPOL',\n",
-       " 'conspiracyfact',\n",
-       " 'noagenda',\n",
-       " 'vacci_nation',\n",
-       " 'walkaway',\n",
-       " 'whatsreallygoinon',\n",
-       " 'cursedmemes',\n",
-       " 'oklahoma',\n",
-       " 'USA_de',\n",
-       " 'berlin',\n",
-       " 'germany',\n",
-       " 'CovIdiots',\n",
-       " 'fucktheccp',\n",
-       " 'Boomerhumour',\n",
-       " 'punnychalkboards',\n",
-       " 'houstonmusic',\n",
-       " 'discworld',\n",
-       " 'labor',\n",
-       " 'CPUSA',\n",
-       " 'ndp',\n",
-       " 'libertarianmeme',\n",
-       " 'Jreg',\n",
-       " 'BreakingPointsNews',\n",
-       " 'Communalists',\n",
-       " 'InformedTankie',\n",
-       " 'InternationalLeft',\n",
-       " 'KomradeInfo',\n",
-       " 'sendinthetanks',\n",
-       " 'urbanplanning',\n",
-       " 'publix',\n",
-       " 'washingtondc',\n",
-       " 'malaysia',\n",
-       " 'FuckThatsViral',\n",
-       " 'Oklahomatoday',\n",
-       " 'normanok',\n",
-       " 'okdemocrats',\n",
-       " 'BadCopNoTimbit',\n",
-       " 'BhutilaKarpoche',\n",
-       " 'Canada_Politics',\n",
-       " 'ClimateCrisisCanada',\n",
-       " 'NovaScotia',\n",
-       " 'fordnation',\n",
-       " 'halifax',\n",
-       " 'ottawa',\n",
-       " 'vancouver',\n",
-       " 'pointlesslygendered',\n",
-       " 'Virginia',\n",
-       " 'conspiracytheories',\n",
-       " 'Trumpet_of_Discord',\n",
-       " 'CoronavirusRelief',\n",
-       " 'religiousfruitcake',\n",
-       " 'CoV2Canada',\n",
-       " 'TheBeliefInstinct',\n",
-       " 'Virology',\n",
-       " 'seculartalk',\n",
-       " 'socialism',\n",
-       " 'technews',\n",
-       " 'NoShitSherlock',\n",
-       " 'techdetects',\n",
-       " 'CorpusChristi',\n",
-       " 'ViralTexas',\n",
-       " 'sanantonio',\n",
-       " 'mildlyvagina',\n",
-       " 'stupidloopholes',\n",
-       " 'Libernadian',\n",
-       " 'Etobicoke',\n",
-       " 'Scarborough',\n",
-       " 'TTC',\n",
-       " 'usa',\n",
-       " 'FuckTheAltWrong',\n",
-       " 'donaldtrump',\n",
-       " 'AskThe_Donald',\n",
-       " 'DeclineIntoCensorship',\n",
-       " 'FreeSpeech',\n",
-       " 'The_Chocker',\n",
-       " 'Hasan_Piker',\n",
-       " 'UpvoteBecauseButt',\n",
-       " 'AnarchoChristian',\n",
-       " 'AntiComAction',\n",
-       " 'Firearms',\n",
-       " 'Government_is_lame',\n",
-       " 'GuardiansOfLiberty',\n",
-       " 'Shitstatistssay',\n",
-       " 'TimPool',\n",
-       " 'VoluntaristMemes',\n",
-       " 'WallStreetbetsELITE',\n",
-       " 'Wallstreetsilver',\n",
-       " 'ConservativesOnly',\n",
-       " 'uspolitics',\n",
-       " 'IntellectualDarkWeb',\n",
-       " 'Jordan_Peterson_Memes',\n",
-       " 'Jung',\n",
-       " 'The_Ultimate',\n",
-       " 'WesternCivilisation',\n",
-       " 'enoughpetersonspam',\n",
-       " 'Blessed_Images',\n",
-       " 'FridayNightFunkin',\n",
-       " 'Offensivejokes',\n",
-       " 'TumblrInAction',\n",
-       " 'averageredditor',\n",
-       " 'redditmoment',\n",
-       " 'Conservativelifestyle',\n",
-       " 'Defund_NPR_and_PBS',\n",
-       " 'EXDemocrats2021',\n",
-       " 'climateskeptics',\n",
-       " 'conservatives',\n",
-       " 'tucker_carlson',\n",
-       " 'AntifascistsofReddit',\n",
-       " 'WomenInNews',\n",
-       " 'asia',\n",
-       " 'AntiLibertarianCringe',\n",
-       " 'EnoughCommieSpam',\n",
-       " 'LoveForLandlords',\n",
-       " 'basicincomejapan',\n",
-       " 'Destiny',\n",
-       " 'EnoughIDWspam',\n",
-       " 'Israel',\n",
-       " 'Jewish',\n",
-       " 'SocialDemocracy',\n",
-       " 'TheMajorityReport',\n",
-       " 'daverubin',\n",
-       " 'sanepolitics',\n",
-       " 'UFCW',\n",
-       " 'redsports',\n",
-       " 'didnthappen',\n",
-       " 'CoronavirusWA',\n",
-       " 'VirginiaPolitics',\n",
-       " 'nova',\n",
-       " 'rva',\n",
-       " 'pregnant',\n",
-       " 'ChurchOfCOVID',\n",
-       " 'CovidSheepWatch',\n",
-       " 'LatinoPeopleTwitter',\n",
-       " 'VideojuegosMX',\n",
-       " 'AgainstTheIlluminati',\n",
-       " 'AlternativeHistory',\n",
-       " 'AwakenTheSheep',\n",
-       " 'DebateVaccines',\n",
-       " 'LevelArchive',\n",
-       " 'DevelEire',\n",
-       " 'GAA',\n",
-       " 'VanLife',\n",
-       " 'SydneyNews',\n",
-       " 'EnoughAntifaSpam',\n",
-       " 'TheDonaldTrump2024',\n",
-       " 'TheShitTankiesSay',\n",
-       " 'benshapiro',\n",
-       " 'Ohio',\n",
-       " 'HillaryForPrison',\n",
-       " 'CoronavirusNewYork',\n",
-       " 'AgainstHateSubreddits',\n",
-       " 'CoronaBumpers',\n",
-       " 'Covid19VaccineRats',\n",
-       " 'CovidVaccinated',\n",
-       " 'CovidVaccineInjury',\n",
-       " 'VACCINES',\n",
-       " 'VaccineDiscussion',\n",
-       " 'modernavaccine',\n",
-       " 'AncientTruehistory',\n",
-       " 'CoronaVaccines',\n",
-       " 'FloridaCoronavirus',\n",
-       " 'conservativecartoons',\n",
-       " 'FragrantHarbour',\n",
-       " 'FUCKCHINAVIRUS',\n",
-       " 'FreedomofSpeech',\n",
-       " 'TheTrumpZone',\n",
-       " 'ronpaul',\n",
-       " 'Liberal',\n",
-       " 'COVID',\n",
-       " 'CoronavirusOntario',\n",
-       " 'CoronavirusToronto',\n",
-       " 'PeoplesPartyofCanada',\n",
-       " 'Liberty_4_Canada',\n",
-       " 'CollegeRepublicans',\n",
-       " 'Deplatformed_',\n",
-       " 'TexasConservatives',\n",
-       " 'ProblemSolvingMatrix',\n",
-       " 'TakeTheJab',\n",
-       " 'VaccineEnvy',\n",
-       " 'vaccinesideeffects',\n",
-       " 'antivax',\n",
-       " 'RussiaLago',\n",
-       " 'IntelligenceNews',\n",
-       " 'BadGOP_NoDoughnuts',\n",
-       " 'GQP',\n",
-       " 'Impeach_Trump',\n",
-       " 'VoteDEM',\n",
-       " 'AntiTrumpAlliance',\n",
-       " 'CorporateMisconduct',\n",
-       " 'EnoughTrumpSpam',\n",
-       " 'Fuck45',\n",
-       " 'GunsAreCool',\n",
-       " 'Intelligence',\n",
-       " 'JoeBiden',\n",
-       " 'Keep_Track',\n",
-       " 'LincolnProject',\n",
-       " 'MAGAs',\n",
-       " 'Michigan',\n",
-       " 'POTUSWatch',\n",
-       " 'Republican_misdeeds',\n",
-       " 'TexasPolitics',\n",
-       " 'VeganLibs',\n",
-       " 'VoteBlue',\n",
-       " 'WhatBidenHasDone',\n",
-       " 'democrats',\n",
-       " 'esist',\n",
-       " 'farming',\n",
-       " 'foreignpolicy',\n",
-       " 'progressive',\n",
-       " 'Africa',\n",
-       " 'internationalpolitics',\n",
-       " 'International',\n",
-       " 'Milk_Tea_Alliance',\n",
-       " 'YouWillSurviveIt',\n",
-       " 'COVID19',\n",
-       " 'USGovernment',\n",
-       " 'USNews2',\n",
-       " 'usanews',\n",
-       " 'BidenCoalition',\n",
-       " 'DemocracyNow',\n",
-       " 'DemocratsforDiversity',\n",
-       " 'uspolicy',\n",
-       " 'world',\n",
-       " 'worldnews2',\n",
-       " 'worldnews247',\n",
-       " 'OntarioCanada',\n",
-       " 'LockdownSkepticismCAN',\n",
-       " 'waterloo',\n",
-       " 'ModernPropaganda',\n",
-       " 'EndTheLockdowns',\n",
-       " 'ConspiracyII',\n",
-       " 'ConspiracyPastPresent',\n",
-       " 'censoredreality',\n",
-       " 'ivermectin',\n",
-       " 'IVMScience',\n",
-       " 'CoronavirusMa',\n",
-       " 'Backcountry',\n",
-       " 'WaterlooWxRecords',\n",
-       " 'worldpolitics2',\n",
-       " 'coveryourselfinoil',\n",
-       " 'trollface']"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "smallsubs"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 23,
    "metadata": {},
    "outputs": [],
@@ -3365,10 +2862,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "drop_large = ['Minecraft', 'pcmasterrace', 'AnimalsBeingBros', 'AnimalsBeingDerps', 'AnimalsBeingJerks', \\\n",
+    "    'cats', 'ArtefactPorn', 'PrequelMemes', 'DunderMifflin', 'skyrim', 'lotrmemes', 'BoneAppleTea', \\\n",
+    "    'dndmemes', 'AmongUs', 'Gamingcirclejerk']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df14 = df13[~df13.subreddit.isin(drop_large)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "largesubs = df14.subreddit.to_list()\n",
+    "import csv\n",
+    "file = open(\"largesubs.csv\", \"w\")\n",
+    "writer = csv.writer(file, delimiter = \"\\n\")\n",
+    "for list_ in largesubs:\n",
+    "     writer.writerow([list_])\n",
+    "file.close()"
+   ]
   }
  ],
  "metadata": {
