keeping working tree clean

--- a/Test_run/find_subs.ipynb
+++ b/Test_run/find_subs.ipynb
@@ -2,6 +2,93 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import datetime"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1583017200"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "int(datetime.datetime(2020, 3, 1).timestamp())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import csv\n",
+    "with open('../Preprocessing/smallsubs.csv', newline='') as f:\n",
+    "    reader = csv.reader(f)\n",
+    "    subreddits = list(reader)\n",
+    "with open('../Preprocessing/largesubs.csv', newline='') as f:\n",
+    "    reader = csv.reader(f)\n",
+    "    largsubs = list(reader)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "subreddits.append(largsubs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "done = os.listdir('../../Files/Submissions/')\n",
+    "for i in done:\n",
+    "    done[done.index(i)] = i[:-7]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in subreddits"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file = open(\"subreddits.csv\", \"w\")\n",
+    "writer = csv.writer(file, delimiter = \"\\n\")\n",
+    "for list_ in subreddits:\n",
+    "     writer.writerow(list_)\n",
+    "file.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [
@@ -2130,11 +2217,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "6c5bfe69c2b2d435baea75ee1a7865fc7666bb526179204de658e4f2811cb086"
-  },
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('reddit_env_test')",
+   "display_name": "Python 3.9.12 ('reddit_env')",
    "language": "python",
    "name": "python3"
   },
@@ -2150,7 +2234,12 @@
    "pygments_lexer": "ipython3",
    "version": "3.9.12"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "7913a71c8e34b61ec22a3bd55dc7c3ae241fdb6cefe9aa5fb754c5121c0e8c4d"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
