--- a/Preprocessing/subs_network.ipynb
+++ b/Preprocessing/subs_network.ipynb
@@ -2897,11 +2897,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "6c5bfe69c2b2d435baea75ee1a7865fc7666bb526179204de658e4f2811cb086"
-  },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.7.0 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -2915,7 +2912,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.7.0"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "e774977668b7c0ae8309835a5187aa7fbf7669e7d0bb59755bc63e573643edcd"
+   }
   }
  },
  "nbformat": 4,
