fixed list, trying with for loop to pull

--- a/Test_run/find_subs.ipynb
+++ b/Test_run/find_subs.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,247 @@
     "    subreddits = list(reader)\n",
     "with open('../Preprocessing/largesubs.csv', newline='') as f:\n",
     "    reader = csv.reader(f)\n",
-    "    largsubs = list(reader)"
+    "    largesubs = list(reader)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[['2meirl4meirl'],\n",
+       " ['dankmemes'],\n",
+       " ['ABoringDystopia'],\n",
+       " ['FuckYouKaren'],\n",
+       " ['awfuleverything'],\n",
+       " ['trippinthroughtime'],\n",
+       " ['meirl'],\n",
+       " ['meme'],\n",
+       " ['HolUp'],\n",
+       " ['memes'],\n",
+       " ['MakeMeSuffer'],\n",
+       " ['funnysigns'],\n",
+       " ['privacy'],\n",
+       " ['teenagers'],\n",
+       " ['me_irl'],\n",
+       " ['worldnews'],\n",
+       " ['UpliftingNews'],\n",
+       " ['conspiracy'],\n",
+       " ['BeAmazed'],\n",
+       " ['CryptoCurrency'],\n",
+       " ['FunnyandSad'],\n",
+       " ['Futurology'],\n",
+       " ['HumansBeingBros'],\n",
+       " ['MadeMeSmile'],\n",
+       " ['MurderedByWords'],\n",
+       " ['PoliticalHumor'],\n",
+       " ['SelfAwarewolves'],\n",
+       " ['ThatsInsane'],\n",
+       " ['TikTokCringe'],\n",
+       " ['UrbanHell'],\n",
+       " ['assholedesign'],\n",
+       " ['coolguides'],\n",
+       " ['facepalm'],\n",
+       " ['india'],\n",
+       " ['interestingasfuck'],\n",
+       " ['mildlyinfuriating'],\n",
+       " ['mildlyinteresting'],\n",
+       " ['nottheonion'],\n",
+       " ['science'],\n",
+       " ['todayilearned'],\n",
+       " ['tumblr'],\n",
+       " ['videos'],\n",
+       " ['wallstreetbets'],\n",
+       " ['wholesomememes'],\n",
+       " ['4chan'],\n",
+       " ['greentext'],\n",
+       " ['ANormalDayInRussia'],\n",
+       " ['PublicFreakout'],\n",
+       " ['ATBGE'],\n",
+       " ['DiWHY'],\n",
+       " ['ofcoursethatsathing'],\n",
+       " ['TIHI'],\n",
+       " ['dontputyourdickinthat'],\n",
+       " ['ActualPublicFreakouts'],\n",
+       " ['IdiotsInCars'],\n",
+       " ['LosAngeles'],\n",
+       " ['WinStupidPrizes'],\n",
+       " ['nextfuckinglevel'],\n",
+       " ['trashy'],\n",
+       " ['AmItheAsshole'],\n",
+       " ['confidentlyincorrect'],\n",
+       " ['Art'],\n",
+       " ['pics'],\n",
+       " ['AskReddit'],\n",
+       " ['Bad_Cop_No_Donut'],\n",
+       " ['BikiniBottomTwitter'],\n",
+       " ['BlackPeopleTwitter'],\n",
+       " ['LeopardsAteMyFace'],\n",
+       " ['Justfuckmyshitup'],\n",
+       " ['CasualUK'],\n",
+       " ['ChoosingBeggars'],\n",
+       " ['Conservative'],\n",
+       " ['Coronavirus'],\n",
+       " ['dataisbeautiful'],\n",
+       " ['funny'],\n",
+       " ['movies'],\n",
+       " ['nba'],\n",
+       " ['news'],\n",
+       " ['CrappyDesign'],\n",
+       " ['CrazyFuckingVideos'],\n",
+       " ['Damnthatsinteresting'],\n",
+       " ['aww'],\n",
+       " ['vandwellers'],\n",
+       " ['DidntKnowIWantedThat'],\n",
+       " ['Documentaries'],\n",
+       " ['Economics'],\n",
+       " ['FellowKids'],\n",
+       " ['JusticeServed'],\n",
+       " ['insaneparents'],\n",
+       " ['instant_regret'],\n",
+       " ['quityourbullshit'],\n",
+       " ['technology'],\n",
+       " ['GetMotivated'],\n",
+       " ['LateStageCapitalism'],\n",
+       " ['WhitePeopleTwitter'],\n",
+       " ['antiwork'],\n",
+       " ['europe'],\n",
+       " ['unitedkingdom'],\n",
+       " ['Health'],\n",
+       " ['HistoryMemes'],\n",
+       " ['ireland'],\n",
+       " ['HistoryPorn'],\n",
+       " ['HydroHomies'],\n",
+       " ['PornhubComments'],\n",
+       " ['Unexpected'],\n",
+       " ['blursedimages'],\n",
+       " ['cursedcomments'],\n",
+       " ['maybemaybemaybe'],\n",
+       " ['okbuddyretard'],\n",
+       " ['shitposting'],\n",
+       " ['HongKong'],\n",
+       " ['Instagramreality'],\n",
+       " ['agedlikemilk'],\n",
+       " ['atheism'],\n",
+       " ['byebyejob'],\n",
+       " ['entertainment'],\n",
+       " ['iamatotalpieceofshit'],\n",
+       " ['insanepeoplefacebook'],\n",
+       " ['sadcringe'],\n",
+       " ['oddlysatisfying'],\n",
+       " ['WTF'],\n",
+       " ['WatchPeopleDieInside'],\n",
+       " ['comedyheaven'],\n",
+       " ['forbiddensnacks'],\n",
+       " ['holdmyfeedingtube'],\n",
+       " ['natureismetal'],\n",
+       " ['MapPorn'],\n",
+       " ['NoahGetTheBoat'],\n",
+       " ['NotMyJob'],\n",
+       " ['PoliticalCompassMemes'],\n",
+       " ['politics'],\n",
+       " ['AbruptChaos'],\n",
+       " ['Whatcouldgowrong'],\n",
+       " ['donthelpjustfilm'],\n",
+       " ['fightporn'],\n",
+       " ['instantkarma'],\n",
+       " ['peopleofwalmart'],\n",
+       " ['PupliftingNews'],\n",
+       " ['SandersForPresident'],\n",
+       " ['Satisfyingasfuck'],\n",
+       " ['ShitPostCrusaders'],\n",
+       " ['Superstonk'],\n",
+       " ['ThatLookedExpensive'],\n",
+       " ['Wellthatsucks'],\n",
+       " ['perfectlycutscreams'],\n",
+       " ['tifu'],\n",
+       " ['Wallstreetbetsnew'],\n",
+       " ['therewasanattempt'],\n",
+       " ['yesyesyesyesno'],\n",
+       " ['youseeingthisshit'],\n",
+       " ['FUCKYOUINPARTICULAR'],\n",
+       " ['technicallythetruth'],\n",
+       " ['Philippines'],\n",
+       " ['canada'],\n",
+       " ['BrandNewSentence'],\n",
+       " ['anime_irl'],\n",
+       " ['comics'],\n",
+       " ['starterpacks'],\n",
+       " ['australia'],\n",
+       " ['cringepics'],\n",
+       " ['environment'],\n",
+       " ['NatureIsFuckingLit'],\n",
+       " ['gifs'],\n",
+       " ['CityPorn'],\n",
+       " ['business'],\n",
+       " ['clevercomebacks'],\n",
+       " ['iamverysmart'],\n",
+       " ['woooosh'],\n",
+       " ['economy'],\n",
+       " ['AteTheOnion'],\n",
+       " ['gatekeeping'],\n",
+       " ['im14andthisisdeep'],\n",
+       " ['skiing'],\n",
+       " ['TheLastAirbender'],\n",
+       " ['oddlyterrifying'],\n",
+       " ['itookapicture'],\n",
+       " ['labrats'],\n",
+       " ['madlads'],\n",
+       " ['offbeat'],\n",
+       " ['Bossfight'],\n",
+       " ['UNBGBBIIVCHIDCTIICBG'],\n",
+       " ['toptalent'],\n",
+       " ['oddlyspecific'],\n",
+       " ['ontario'],\n",
+       " ['toronto'],\n",
+       " ['philosophy'],\n",
+       " ['psychology'],\n",
+       " ['rareinsults'],\n",
+       " ['specializedtools'],\n",
+       " ['suspiciouslyspecific'],\n",
+       " ['singapore'],\n",
+       " ['TheWayWeWere'],\n",
+       " ['AccidentalComedy'],\n",
+       " ['BadDesigns'],\n",
+       " ['KidsAreFuckingStupid'],\n",
+       " ['confusing_perspective'],\n",
+       " ['crappyoffbrands'],\n",
+       " ['dontdeadopeninside'],\n",
+       " ['engrish'],\n",
+       " ['onejob'],\n",
+       " ['shittyfoodporn'],\n",
+       " ['SweatyPalms'],\n",
+       " ['JoeRogan'],\n",
+       " ['Libertarian'],\n",
+       " ['tattoos'],\n",
+       " ['GoCommitDie'],\n",
+       " ['PewdiepieSubmissions'],\n",
+       " ['blackmagicfuckery'],\n",
+       " ['blessedimages'],\n",
+       " ['childfree'],\n",
+       " ['ihadastroke'],\n",
+       " ['unpopularopinion'],\n",
+       " ['youngpeopleyoutube'],\n",
+       " ['bestof'],\n",
+       " ['sports'],\n",
+       " ['Awwducational'],\n",
+       " ['nyc'],\n",
+       " ['woahdude'],\n",
+       " ['popping'],\n",
+       " ['terriblefacebookmemes'],\n",
+       " ['DataHoarder']]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "largsubs"
    ]
   },
   {
@@ -2209,7 +2449,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('reddit_env')",
+   "display_name": "Python 3.9.12 ('reddit_env_test')",
    "language": "python",
    "name": "python3"
   },
@@ -2228,7 +2468,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "7913a71c8e34b61ec22a3bd55dc7c3ae241fdb6cefe9aa5fb754c5121c0e8c4d"
+    "hash": "6c5bfe69c2b2d435baea75ee1a7865fc7666bb526179204de658e4f2811cb086"
    }
   }
  },
