--- a/Test_run/test.ipynb
+++ b/Test_run/test.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Imports"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -20,6 +27,13 @@
     "import os\n",
     "\n",
     "%config InlineBackend.figure_format='retina'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Test Validating Pulls"
    ]
   },
   {
@@ -814,6 +828,13 @@
    ],
    "source": [
     "print(len(res))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Tests for Identifying subs"
    ]
   },
   {
@@ -1643,58 +1664,6 @@
    ],
    "source": [
     "g"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 71,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "l = t.crosspost_parent_list.tolist()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 72,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "object of type 'float' has no len()",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m/Users/jakobschlierf/Desktop/Master/Thesis/Github/Test_run/test.ipynb Cell 8'\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/jakobschlierf/Desktop/Master/Thesis/Github/Test_run/test.ipynb#ch0000057?line=0'>1</a>\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m l:\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/jakobschlierf/Desktop/Master/Thesis/Github/Test_run/test.ipynb#ch0000057?line=1'>2</a>\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mlen\u001b[39;49m(i) \u001b[39m>\u001b[39m \u001b[39m0\u001b[39m:\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/jakobschlierf/Desktop/Master/Thesis/Github/Test_run/test.ipynb#ch0000057?line=2'>3</a>\u001b[0m         \u001b[39mprint\u001b[39m(i)\n",
-      "\u001b[0;31mTypeError\u001b[0m: object of type 'float' has no len()"
-     ]
-    }
-   ],
-   "source": [
-    "for i in l:\n",
-    "    if len(i) > 0:\n",
-    "        print(i)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 76,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'entertainment'"
-      ]
-     },
-     "execution_count": 76,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "l[6][0]['subreddit']"
    ]
   },
   {
@@ -2739,53 +2708,6 @@
    "outputs": [],
    "source": [
     "df2 = df2[df2['crosspost_parent'] != 'u_']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 193,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "18"
-      ]
-     },
-     "execution_count": 193,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(row['crosspost_parent_list'][0]['subreddit'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 195,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[]"
-      ]
-     },
-     "execution_count": 195,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "res = []\n",
-    "for i, row in df.iterrows():\n",
-    "    if type(row['crosspost_parent_list']) == list:\n",
-    "        if len(row['crosspost_parent_list']) >= 3:\n",
-    "            if row['crosspost_parent_list'][0]['subreddit'][0:2] == 'u_':\n",
-    "                res.append(row['crosspost_parent_list'])\n",
-    "\n",
-    "res"
    ]
   },
   {
