--- a/Test_run/test.ipynb
+++ b/Test_run/test.ipynb
@@ -23,10 +23,199 @@
     "import simplejson as json\n",
     "from pmaw import PushshiftAPI\n",
     "import pyspark\n",
-    "import datetime as dt\n",
+    "import datetime\n",
     "import os\n",
     "\n",
     "%config InlineBackend.figure_format='retina'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "start = int(datetime.datetime(2020, 3, 1).timestamp())\n",
+    "end = int(datetime.datetime(2022, 3, 31).timestamp())\n",
+    "split = 24"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def splittimeframe(subreddit, start, end, split):\n",
+    "    split_list = []\n",
+    "    step = (end - start) / split\n",
+    "    for i in range(split):\n",
+    "            s = int(start + i * step)\n",
+    "            e = int((start + (i + 1) * step) - 1)\n",
+    "            if i == split - 1:\n",
+    "                    e += 86400\n",
+    "            split_list.append([subreddit, s, e])\n",
+    "\n",
+    "    return split_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ivermectin 1583017200 1585753049\n",
+      "ivermectin 1585753050 1588488899\n",
+      "ivermectin 1588488900 1591224749\n",
+      "ivermectin 1591224750 1593960599\n",
+      "ivermectin 1593960600 1596696449\n",
+      "ivermectin 1596696450 1599432299\n",
+      "ivermectin 1599432300 1602168149\n",
+      "ivermectin 1602168150 1604903999\n",
+      "ivermectin 1604904000 1607639849\n",
+      "ivermectin 1607639850 1610375699\n",
+      "ivermectin 1610375700 1613111549\n",
+      "ivermectin 1613111550 1615847399\n",
+      "ivermectin 1615847400 1618583249\n",
+      "ivermectin 1618583250 1621319099\n",
+      "ivermectin 1621319100 1624054949\n",
+      "ivermectin 1624054950 1626790799\n",
+      "ivermectin 1626790800 1629526649\n",
+      "ivermectin 1629526650 1632262499\n",
+      "ivermectin 1632262500 1634998349\n",
+      "ivermectin 1634998350 1637734199\n",
+      "ivermectin 1637734200 1640470049\n",
+      "ivermectin 1640470050 1643205899\n",
+      "ivermectin 1643205900 1645941749\n",
+      "ivermectin 1645941750 1648763999\n"
+     ]
+    }
+   ],
+   "source": [
+    "for sub, start, end in l:\n",
+    "    print(sub, start, end)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[['ivermectin', 1583017200, 1585753049],\n",
+       " ['ivermectin', 1585753050, 1588488899],\n",
+       " ['ivermectin', 1588488900, 1591224749],\n",
+       " ['ivermectin', 1591224750, 1593960599],\n",
+       " ['ivermectin', 1593960600, 1596696449],\n",
+       " ['ivermectin', 1596696450, 1599432299],\n",
+       " ['ivermectin', 1599432300, 1602168149],\n",
+       " ['ivermectin', 1602168150, 1604903999],\n",
+       " ['ivermectin', 1604904000, 1607639849],\n",
+       " ['ivermectin', 1607639850, 1610375699],\n",
+       " ['ivermectin', 1610375700, 1613111549],\n",
+       " ['ivermectin', 1613111550, 1615847399],\n",
+       " ['ivermectin', 1615847400, 1618583249],\n",
+       " ['ivermectin', 1618583250, 1621319099],\n",
+       " ['ivermectin', 1621319100, 1624054949],\n",
+       " ['ivermectin', 1624054950, 1626790799],\n",
+       " ['ivermectin', 1626790800, 1629526649],\n",
+       " ['ivermectin', 1629526650, 1632262499],\n",
+       " ['ivermectin', 1632262500, 1634998349],\n",
+       " ['ivermectin', 1634998350, 1637734199],\n",
+       " ['ivermectin', 1637734200, 1640470049],\n",
+       " ['ivermectin', 1640470050, 1643205899],\n",
+       " ['ivermectin', 1643205900, 1645941749],\n",
+       " ['ivermectin', 1645941750, 1648763999]]"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "l"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " 0 start 03/01/2020, 00:00:00, end 04/01/2020, 16:57:29\n",
+      " 1 start 04/01/2020, 16:57:30, end 05/03/2020, 08:54:59\n",
+      " 2 start 05/03/2020, 08:55:00, end 06/04/2020, 00:52:29\n",
+      " 3 start 06/04/2020, 00:52:30, end 07/05/2020, 16:49:59\n",
+      " 4 start 07/05/2020, 16:50:00, end 08/06/2020, 08:47:29\n",
+      " 5 start 08/06/2020, 08:47:30, end 09/07/2020, 00:44:59\n",
+      " 6 start 09/07/2020, 00:45:00, end 10/08/2020, 16:42:29\n",
+      " 7 start 10/08/2020, 16:42:30, end 11/09/2020, 07:39:59\n",
+      " 8 start 11/09/2020, 07:40:00, end 12/10/2020, 23:37:29\n",
+      " 9 start 12/10/2020, 23:37:30, end 01/11/2021, 15:34:59\n",
+      " 10 start 01/11/2021, 15:35:00, end 02/12/2021, 07:32:29\n",
+      " 11 start 02/12/2021, 07:32:30, end 03/15/2021, 23:29:59\n",
+      " 12 start 03/15/2021, 23:30:00, end 04/16/2021, 16:27:29\n",
+      " 13 start 04/16/2021, 16:27:30, end 05/18/2021, 08:24:59\n",
+      " 14 start 05/18/2021, 08:25:00, end 06/19/2021, 00:22:29\n",
+      " 15 start 06/19/2021, 00:22:30, end 07/20/2021, 16:19:59\n",
+      " 16 start 07/20/2021, 16:20:00, end 08/21/2021, 08:17:29\n",
+      " 17 start 08/21/2021, 08:17:30, end 09/22/2021, 00:14:59\n",
+      " 18 start 09/22/2021, 00:15:00, end 10/23/2021, 16:12:29\n",
+      " 19 start 10/23/2021, 16:12:30, end 11/24/2021, 07:09:59\n",
+      " 20 start 11/24/2021, 07:10:00, end 12/25/2021, 23:07:29\n",
+      " 21 start 12/25/2021, 23:07:30, end 01/26/2022, 15:04:59\n",
+      " 22 start 01/26/2022, 15:05:00, end 02/27/2022, 07:02:29\n",
+      " 23 start 02/27/2022, 07:02:30, end 03/31/2022, 23:59:59\n"
+     ]
+    }
+   ],
+   "source": [
+    "step = (end - start) / split\n",
+    "for i in range(split):\n",
+    "        s = start + i * step\n",
+    "        e = (start + (i + 1) * step) - 1\n",
+    "        if i == split - 1:\n",
+    "                e += 86400\n",
+    "        s_format = datetime.datetime.fromtimestamp(s).strftime(\"%m/%d/%Y, %H:%M:%S\")\n",
+    "        e_format = datetime.datetime.fromtimestamp(e).strftime(\"%m/%d/%Y, %H:%M:%S\")\n",
+    "        print(f' {i} start {s_format}, end {e_format}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'03/01/2020, 00:00:00'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "datetime.datetime.fromtimestamp(test).strftime(\"%m/%d/%Y, %H:%M:%S\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Distribute Pulls test"
    ]
   },
   {
