calculated on server

--- a/Preprocessing/validate_pulls.ipynb
+++ b/Preprocessing/validate_pulls.ipynb
@@ -59,9 +59,108 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>degree_centrality</th>\n",
+       "      <th>closeness_centrality</th>\n",
+       "      <th>degree</th>\n",
+       "      <th>crosspost_parent</th>\n",
+       "      <th>crosspost_child</th>\n",
+       "      <th>total</th>\n",
+       "      <th>crosspost_parent_%</th>\n",
+       "      <th>crosspost_child_%</th>\n",
+       "      <th>subscribers</th>\n",
+       "      <th>component</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Comments</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2.138425</td>\n",
+       "      <td>115.134302</td>\n",
+       "      <td>1792</td>\n",
+       "      <td>74421.0</td>\n",
+       "      <td>9509.0</td>\n",
+       "      <td>1008582.0</td>\n",
+       "      <td>25.686649</td>\n",
+       "      <td>1.694467</td>\n",
+       "      <td>999686533</td>\n",
+       "      <td>110</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.368735</td>\n",
+       "      <td>17.560282</td>\n",
+       "      <td>309</td>\n",
+       "      <td>15537.0</td>\n",
+       "      <td>2042.0</td>\n",
+       "      <td>110727.0</td>\n",
+       "      <td>6.386520</td>\n",
+       "      <td>0.370353</td>\n",
+       "      <td>39705912</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          degree_centrality  closeness_centrality  degree  crosspost_parent  \\\n",
+       "Comments                                                                      \n",
+       "0                  2.138425            115.134302    1792           74421.0   \n",
+       "1                  0.368735             17.560282     309           15537.0   \n",
+       "\n",
+       "          crosspost_child      total  crosspost_parent_%  crosspost_child_%  \\\n",
+       "Comments                                                                      \n",
+       "0                  9509.0  1008582.0           25.686649           1.694467   \n",
+       "1                  2042.0   110727.0            6.386520           0.370353   \n",
+       "\n",
+       "          subscribers  component  \n",
+       "Comments                          \n",
+       "0           999686533        110  \n",
+       "1            39705912          0  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "comments = os.listdir('../../Files/Comments')\n",
     "try:\n",
@@ -73,7 +172,7 @@
     "subs['Comments'] = 0\n",
     "for i in comments:\n",
     "    subs.loc[subs['subreddit'] == i[:-7], 'Comments'] = 1\n",
-    "submision_df = subs.groupby('Submissions').sum()\n",
+    "submision_df = subs.groupby('Comments').sum()\n",
     "submision_df"
    ]
   },
@@ -926,7 +1025,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('reddit_env_test')",
+   "display_name": "Python 3.9.12 ('reddit_env')",
    "language": "python",
    "name": "python3"
   },
@@ -945,7 +1044,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "6c5bfe69c2b2d435baea75ee1a7865fc7666bb526179204de658e4f2811cb086"
+    "hash": "7913a71c8e34b61ec22a3bd55dc7c3ae241fdb6cefe9aa5fb754c5121c0e8c4d"
    }
   }
  },
